fixed navbar contrast issue

--- a/app/assets/stylesheets/application/page.css.scss
+++ b/app/assets/stylesheets/application/page.css.scss
@@ -39,6 +39,10 @@
   padding: 6px;
 }
 
+.large-spacing {
+  padding: 12px;
+}
+
 .pageContent {
 }
 
