--- a/app/assets/stylesheets/themes/tagesschau/page.css.scss
+++ b/app/assets/stylesheets/themes/tagesschau/page.css.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .box {
-  &:not(.obtrusive){
+  &:not(.obtrusive) {
     background-color: #F9F9F9;
     background-image: linear-gradient(to bottom, white, #F2F2F2);
     background-repeat: repeat-x;
@@ -33,6 +33,10 @@ body {
 
   .box-header {
   }
+}
+
+.box-transparent {
+  background-color: rgba(255,255,255,0.5);
 }
 
 .plain {
