--- a/app/assets/stylesheets/themes/tagesschau/variables.css.scss
+++ b/app/assets/stylesheets/themes/tagesschau/variables.css.scss
@@ -12,3 +12,8 @@ $border-radius-large: 0;
 /* Typography */
 $link-color: #2a6496;
 // $link-hover-color:      darken($link-color, 15%);
+
+
+/* Navigation */
+$navbar-inverse-color: #DDD;
+$navbar-inverse-link-color: #DDD;
